--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.1.1",
         "bootstrap-vue": "^2.22.0",
-        "vue-form-generator": "^2.3.4"
+        "vue-form-generator": "^2.3.4",
+        "vue2-google-maps": "^0.10.7"
     }
 }
